<resources>
    <string name="app_name">Luga Luga</string>
    <string name="label"><b>E-mail</b></string>
    <string name="senha"><b>Senha</b></string>
    <string name="cal"><b>Logar</b></string>


    <string name="tv_produto">Nome Produto</string>
    <string name="tv_preco">R$ 00,00</string>
    <string name="tv_descricao">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</string>
    <string name="alugaBtn">Alugar</string>
    <string name="pc">10PC</string>
    <string name="input_nome_user">Nome</string>
    <string name="input_cpf_user">CPF</string>
    <string name="input_nascimento_user">Data de Nascimento</string>
    <string name="input_cep_user">CEP</string>
    <string name="input_cidade_user">Cidade</string>
    <string name="input_logradouro_user">Logradouro</string>
    <string name="input_numero_user">N°</string>
    <string name="input_complemento_user">Complemento</string>
    <string name="input_bairro_user">Bairro</string>
    <string name="input_email_user">Email</string>
    <string name="input_senha_user">Senha</string>
    <string name="btn_cadastrar">CADASTRAR</string>

    <string-array name="uf_cadastro">

        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>

    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_prod">Produtos</string>
    <string name="input_assunto_user">Assunto</string>
    <string name="input_msg_user">Mensagem</string>
    <string name="btn_enviar">ENVIAR</string>
    <string name="sobre">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</string>
</resources>