<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProdutoActivty">

    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_produto"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/quantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pc"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/prodImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_produto"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_preco"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/prodImg"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/alugaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#008E82"
        android:text="@string/alugaBtn"
        android:textAllCaps="true"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prodImg" />

    <TextView
        android:id="@+id/tv_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_descricao"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/alugaBtn"
        app:layout_constraintStart_toStartOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>