<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_prod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_produto" />

    <TextView
        android:id="@+id/tv_nomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_produto"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/img_prod"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/tv_nomePreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="304dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_preco"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_prod" />

    <TextView
        android:id="@+id/tv_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_descricao"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_nomeProduto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_margin="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>